--- a/javascript/introduction-to-js/apply-javascript-internal.html
+++ b/javascript/introduction-to-js/apply-javascript-internal.html
@@ -6,14 +6,14 @@
     <script>
       document.addEventListener("DOMContentLoaded", function() {
         function createParagraph() {
-          var para = document.createElement('p');
+          const para = document.createElement('p');
           para.textContent = '你点击了这个按钮！';
           document.body.appendChild(para);
         }
 
-        var buttons = document.querySelectorAll('button');
+        const buttons = document.querySelectorAll('button');
 
-        for(var i = 0; i < buttons.length ; i++) {
+        for(let i = 0; i < buttons.length ; i++) {
           buttons[i].addEventListener('click', createParagraph);
         }
       });
