--- a/javascript/key-event/index.html
+++ b/javascript/key-event/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-    <meta charset="UTF-8">
-    <link type="text/css" rel="stylesheet" href="style.css">
-    <title>KeyboardEvent.key</title>
+  <meta charset="UTF-8">
+  <title>KeyboardEvent.key</title>
+  <link type="text/css" rel="stylesheet" href="style.css">
+  <script src="main.js" async></script>
 </head>
 
 <body>
-    <div class="flex flex-left">
-        <textarea rows="5" id="test-target"></textarea>
-        <button id="btn-clear-console">清空控制台</button>
-    </div>
-    <div class="flex flex-right">
-        <div id="console-log"></div>
-    </div>
-    <script src="main.js"></script>
+  <div class="flex flex-left">
+    <textarea rows="5" id="test-target"></textarea>
+    <button id="btn-clear-console">清空控制台</button>
+  </div>
+  <div class="flex flex-right">
+    <div id="console-log"></div>
+  </div>
 </body>
 </html>
