--- a/javascript/number-guessing-game/number-game-errors.html
+++ b/javascript/number-guessing-game/number-game-errors.html
@@ -41,21 +41,21 @@
 </body>
 
 <script>
-  var randomNumber = Math.floor(Math.random()) + 1;
+  let randomNumber = Math.floor(Math.random()) + 1;
 
-  var guesses = document.querySelector('.guesses');
-  var lastResult = document.querySelector('.lastResult');
-  var lowOrHi = document.querySelector('lowOrHi');
+  const guesses = document.querySelector('.guesses');
+  const lastResult = document.querySelector('.lastResult');
+  const lowOrHi = document.querySelector('lowOrHi');
 
-  var guessSubmit = document.querySelector('.guessSubmit');
-  var guessField = document.querySelector('.guessField');
+  const guessSubmit = document.querySelector('.guessSubmit');
+  const guessField = document.querySelector('.guessField');
 
-  var guessCount = 1;
-  var resetButton;
+  let guessCount = 1;
+  let resetButton;
 
   function checkGuess() {
  
-    var userGuess = Number(guessField.value);
+    let userGuess = Number(guessField.value);
     if(guessCount === 1) {
       guesses.textContent = '上次猜的数：';
     }
@@ -97,7 +97,7 @@
   function resetGame() {
 	  guessCount = 1;
 	
-	  var resetParas = document.querySelectorAll('.resultParas p');
+	  const resetParas = document.querySelectorAll('.resultParas p');
 	  for(var i = 0; i < resetParas.length; i++) {
 		  resetParas[i].textContent = '';
 	  }
