--- a/javascript/touch-paint/index.html
+++ b/javascript/touch-paint/index.html
@@ -2,16 +2,16 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-    <meta charset="utf-8">
-    <link href="style.css" rel="stylesheet" type="text/css" />
-    <title>触摸事件</title>
+  <meta charset="utf-8">
+  <title>触摸事件</title>
+  <link href="style.css" rel="stylesheet" type="text/css" />
+  <script src="main.js" async></script>
 </head>
 <body>
-    <canvas id="canvas">
-        当前浏览器不支持 canvas 元素
-    </canvas>
-    <br>记录： 
-    <pre id="log"></pre>
-    <script src="main.js"> </script>
+  <canvas id="canvas">
+    当前浏览器不支持 canvas 元素
+  </canvas>
+  <br>记录： 
+  <pre id="log"></pre>
 </body>
 </html>
