--- a/javascript/bouncing-balls/index.html
+++ b/javascript/bouncing-balls/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
-    <head>
-        <meta charset="utf-8">
-        <title>弹球</title>
-        <link rel="stylesheet" href="style.css">
-    </head>
+  <head>
+    <meta charset="utf-8">
+    <title>弹球</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="main.js" async></script>
+  </head>
 
-    <body>
-        <h1>弹球</h1>
-        <canvas></canvas>
-
-        <script src="main.js"></script>
-    </body>
+  <body>
+    <h1>弹球</h1>
+    <canvas></canvas>
+  </body>
 </html>
