--- a/javascript/gallery/index.html
+++ b/javascript/gallery/index.html
@@ -2,11 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-
     <title>照片库</title>
-
     <link rel="stylesheet" href="style.css">
-    
+    <script src="main.js" async></script>
   </head>
 
   <body>
@@ -19,9 +17,6 @@
     </div>
 
     <div class="thumb-bar">
-
-
     </div>
-    <script src="main.js"></script>
   </body>
 </html>
