--- a/javascript/introduction-to-js/javascript-label.html
+++ b/javascript/introduction-to-js/javascript-label.html
@@ -10,10 +10,10 @@
         letter-spacing: 1px;
         text-transform: uppercase;
         text-align: center;
-        border: 2px solid rgba(0,0,200,0.6);
-        background: rgba(0,0,200,0.3);
-        color: rgba(0,0,200,0.6);
-        box-shadow: 1px 1px 2px rgba(0,0,200,0.4);
+        border: 2px solid rgba(0, 0, 200, 0.6);
+        background: rgba(0, 0, 200, 0.3);
+        color: rgba(0, 0, 200, 0.6);
+        box-shadow: 1px 1px 2px rgba(0, 0, 200, 0.4);
         border-radius: 10px;
         padding: 3px 10px;
         display: inline-block;
