--- a/javascript/silly-story-genarator/start/index.html
+++ b/javascript/silly-story-genarator/start/index.html
@@ -4,39 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width">
-
     <title>笑话生成器</title>
-
-    <style>
-
-    body {
-        font-family: helvetica, sans-serif;
-        width: 350px;
-        border: 1px solid;
-        padding: 1em;
-    }
-
-    label {
-      font-weight: bold;  
-    }
-
-    div {
-      padding-bottom: 20px;
-    }
-
-    input[type="text"] {
-      padding: 5px;
-      width: 150px;
-    }
-
-    p {
-      background: #FFC125;
-      color: #5E2612;
-      padding: 10px;
-      visibility: hidden;
-    }
-
-    </style>
+    <link rel="stylesheet" href="style.css">
+    <script src="ui.js" async></script>
   </head>
 
   <body>
@@ -53,11 +23,7 @@
       <button class="randomize">随机生成笑话</button>
   </div>
 
-  <!-- Thanks a lot to Willy Aguirre for his help with the code for this assessment -->
-
   <p class="story"></p>
-
-  <script src="ui.js"></script>
     
   </body>
 </html>
