--- a/html/site-structure/index.html
+++ b/html/site-structure/index.html
@@ -5,8 +5,9 @@
 
     <title>洛乐部</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Sonsie+One" rel="stylesheet" type="text/css" />
-    <link href='http://cdn.webfont.youziku.com/webfonts/nomal/127548/144/5c652a67f629d80e300c07d6.css' rel='stylesheet' type='text/css' />
     <link href="style.css" rel="stylesheet" type="text/css" />
+    <script type="text/javascript" src="http://cdn.webfont.youziku.com/wwwroot/js/wf/youziku.api.min.js" defer></script>
+    <script type="text/javascript" src="font.js" defer></script>
   </head>
 
   <body>
