fix font problem

--- a/html/site-structure/index.html
+++ b/html/site-structure/index.html
@@ -4,10 +4,9 @@
     <meta charset="utf-8">
 
     <title>洛乐部</title>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Sonsie+One" rel="stylesheet" type="text/css" />
-    <link href="style.css" rel="stylesheet" type="text/css" />
-    <script type="text/javascript" src="http://cdn.webfont.youziku.com/wwwroot/js/wf/youziku.api.min.js" defer></script>
-    <script type="text/javascript" src="font.js" defer></script>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Sonsie+One" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=ZCOOL+KuaiLe" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
   </head>
 
   <body>
