--- a/html/site-structure/index.html
+++ b/html/site-structure/index.html
@@ -5,7 +5,7 @@
 
     <title>二次元俱乐部</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Sonsie+One" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=ZCOOL+KuaiLe" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=ZCOOL+KuaiLe&amp;subset=chinese-simplified" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
   </head>
 
