html letter trivial change

--- a/html/letter/index.html
+++ b/html/letter/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="utf-8">
   <meta name="author" content="李雷">
   <title>纽臂科学院学位申请邮件往来</title>
   <style>
@@ -32,6 +32,7 @@
 
 <body>
   <p class="sender-column italic">
+    中国北京市门头沟区，102300<br>
     纽臂大学 纽臂科学院<br>
     <strong>李雷</strong> 教授<br>
     <strong>联系电话</strong>：123-456-7890<br>
@@ -65,7 +66,7 @@
 
   <p>请告诉我你是否愿意在学期开始时来校，并告知你选择的学期。</p>
 
-  <p>你可以在我们的网站上找到更多关于<a href="#">学校重要日期</a>的信息。</p>
+  <p>你可以在我们的网站上找到更多关于 <a href="https://example.com/">学校重要日期</a> 的信息。</p>
 
   <h2>学习科目</h2>
 
@@ -91,7 +92,7 @@
     <dd>一个有趣的历史误传，二十世纪六十年代的英国探险者宣称发现了一种像“机器人跳舞”的舞蹈，这种舞蹈动作僵硬，流行于加拿大和阿拉斯加北部地区。后来人们发现这里的居民是因为天气太冷了才做出这样的动作。</dd>
   </dl>
 
-  <p>更多信息请查看我的 <a href="#" title="李雷的异域舞蹈研究站点">异域舞蹈研究</a> 网页。</p>
+  <p>更多信息请查看我的 <a href="https://example.com/" title="李雷的异域舞蹈研究站点">异域舞蹈研究</a> 网页。</p>
 
   <p>李雷 教授</p>
 
