README trivial change; LETTER isolate CSS; BIRD localize

--- a/html/bird-watching/index.html
+++ b/html/bird-watching/index.html
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-CN">
   <head>
     <meta charset="utf-8">
-    <title>鸟类展览馆</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300|Cinzel+Decorative:700" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=ZCOOL+XiaoWei&amp;subset=chinese-simplified" rel="stylesheet">
-    <link href="style.css" rel="stylesheet">
+    <title>观鸟网</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300|Cinzel+Decorative:700">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=ZCOOL+XiaoWei&amp;subset=chinese-simplified">
+    <link rel="stylesheet" href="styles/style.css">
+    <link rel="icon" href="images/dove.png">
   </head>
 
   <body>
     <header>
-      <h1>鸟类展览馆</h1>
-      <img src="dove.png" alt="a simple dove logo">
+      <h1>观鸟网</h1>
+      <img src="images/dove.png" alt="一个鸽子剪影图片">
 
       <nav>
         <ul>
           <li><span>主页</span></li>
           <li><a href="#">开始</a></li>
           <li><a href="#">图片</a></li>
-          <li><a href="#">器材</a></li>
+          <li><a href="#">设备</a></li>
           <li><a href="#">论坛</a></li>
         </ul>
       </nav>
@@ -29,25 +30,23 @@
       <article>
         <h2>欢迎</h2>
 
-        <p>欢迎来到虚拟鸟类展览馆站点Welcome to our fake birdwatching site. If this were a real site, it would be the ideal place to come to learn more about birdwatching, whether you are a beginner looking to learn how to get into birding, or an expert wanting to share ideas, tips, and photos with other like-minded people.</p>
-
-        <p>So don't waste time! Get what you need, then turn off that computer and get out into the great outdoors!</p>
+        <p>欢迎访问观鸟网虚拟站点。如果这是一个真实的网站，那么它就是观鸟爱好者的理想聚集地。无论你是一名期望学习观鸟知识的新手，还是一位希望分享体会、经验和图片的观鸟老手。</p>
+        <p>时不我待！赶快带齐装备，关上电脑，去拥抱美丽的大自然吧！</p>
       </article>
 
       <aside>
-        <h2>Favourite photos</h2>
+        <h2>收藏照片</h2>
 
-        <a href="favorite-1.jpg"><img src="favorite-1_th.jpg" alt="Small black bird, black claws, long black slender beak, links to larger version of the image"></a>
-        <a href="favorite-2.jpg"><img src="favorite-2_th.jpg" alt="Top half of a pretty bird with bright blue plumage on neck, light colored beak, blue headdress, links to larger version of the image"></a>
-        <a href="favorite-3.jpg"><img src="favorite-3_th.jpg" alt="Top half of a large bird with white plumage, very long curved narrow light colored break, links to larger version of the image"></a>
-        <a href="favorite-4.jpg"><img src="favorite-4_th.jpg" alt="Large bird, mostly white plumage with black plumage on back and rear, long straight white beak, links to larger version of the image"></a>
+        <a href="images/favorite-1.jpg"><img src="images/favorite-1_th.jpg" alt="一只体型小巧的鸟，羽毛蓝绿色，爪黑白相间，黑色的喙细且锋利。点击缩略图查看完整照片。"></a>
+        <a href="images/favorite-2.jpg"><img src="images/favorite-2_th.jpg" alt="一只美丽的孔雀的上半身图片，它的颈上覆盖蓝色的羽毛，有浅色的喙和蓝色的冠。点击缩略图查看完整照片。"></a>
+        <a href="images/favorite-3.jpg"><img src="images/favorite-3_th.jpg" alt="一只大鸟的上半身图片，羽毛白色，浅色的喙细长而弯曲。点击缩略图查看完整照片。"></a>
+        <a href="images/favorite-4.jpg"><img src="images/favorite-4_th.jpg" alt="一只成年鹈鹕，多数羽毛为白色，背部和腹部有少许黑色羽毛，又长又直的喙呈黄色，嘴下有一个喉囊可以暂时储存食物。点击缩略图查看完整照片。"></a>
       </aside>
     </main>
 
     <footer>
-
-      <p>This fake website example is CC0 — any part of this code may be reused in any way you wish. Original example written by Chris Mills, 2016.</p>
-      <p><a href="http://game-icons.net/lorc/originals/dove.html">Dove icon</a> by Lorc.</p>
+      <p>本虚拟站点采用 CC0 协议，代码所有内容均可任意修改和复用。原始版本由 Chris Mills 于 2016 年编写。Roy Tian 于 2019 年汉化。</p>
+      <p><a href="http://game-icons.net/lorc/originals/dove.html">鸽子图标</a> 由 Lorc 绘制。</p>
     </footer>
 
   </body>
