--- a/html/letter/index.html
+++ b/html/letter/index.html
@@ -4,30 +4,7 @@
   <meta charset="utf-8">
   <meta name="author" content="李雷">
   <title>纽臂科学院学位申请邮件往来</title>
-  <style>
-    body {
-      max-width: 800px;
-      margin: 0 auto;
-    }
-    .sender-column {
-      text-align: right;
-    }
-    h1 {
-      font-size: 1.5em;
-    }
-    h2 {
-      font-size: 1.3em;
-    }
-    p, ul, ol, dl, address {
-      font-size: 1.1em;
-    }
-    p, li, dd, dt, address {
-      line-height: 1.5;
-    }
-    p.italic {
-      font-style: italic;
-    }
-  </style>
+  <link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body>
@@ -44,8 +21,8 @@
   </p>
 
   <p class="italic">
-    <strong>韩梅梅 女士</strong><br>
-    中国海南省三亚市亚龙湾
+    中国海南省三亚市亚龙湾<br>
+    <strong>韩梅梅 女士</strong>
   </p>
 
   <h1>回复：韩梅梅学位申请</h1>
@@ -95,7 +72,6 @@
   <p>更多信息请查看我的 <a href="https://example.com/" title="李雷的异域舞蹈研究站点">异域舞蹈研究</a> 网页。</p>
 
   <p>李雷 教授</p>
-
 
   <p>纽臂大学校训：<q>人人皆可纽臂</q> —— <cite>诸葛中天 绅士</cite></p>
 </body>
