restructure & solve async pitfalls

--- a/extras/gallery-improved/index.html
+++ b/extras/gallery-improved/index.html
@@ -4,29 +4,28 @@
   <meta charset="UTF-8">
   <title>照片库</title>
   <link rel="stylesheet" type="text/css" href="style.css">
-  <script src="main.js" async></script>
+  <script src="main.js" defer></script>
 </head>
 
 <body>
 
-<h1>照片库</h1>
+  <h1>照片库</h1>
 
-<div class="div-current">
-  <button class="btn-img-op" id="btn-brightness">变暗</button>
-  <button class="btn-img-op" id="btn-blur">模糊</button>
-  <button class="btn-img-op" id="btn-gray">黑白</button>
-  <div id="div-full"></div>
-</div>
+  <div class="div-current">
+    <button class="btn-img-op" id="btn-brightness">变暗</button>
+    <button class="btn-img-op" id="btn-blur">模糊</button>
+    <button class="btn-img-op" id="btn-gray">黑白</button>
+    <div id="div-full"></div>
+  </div>
 
-<div class="div-slide">
-  <div class="div-slide-item div-nav" id="div-nav-left">&lt;&lt;</div>
-  <div class="div-slide-item div-thumb" id="div-thumb-0"></div>
-  <div class="div-slide-item div-thumb" id="div-thumb-1"></div>
-  <div class="div-slide-item div-thumb" id="div-thumb-2"></div>
-  <div class="div-slide-item div-thumb" id="div-thumb-3"></div>
-  <div class="div-slide-item div-nav" id="div-nav-right">&gt;&gt;</div>
-</div>
-
+  <div class="div-slide">
+    <div class="div-slide-item div-nav" id="div-nav-left">&lt;&lt;</div>
+    <div class="div-slide-item div-thumb" id="div-thumb-0"></div>
+    <div class="div-slide-item div-thumb" id="div-thumb-1"></div>
+    <div class="div-slide-item div-thumb" id="div-thumb-2"></div>
+    <div class="div-slide-item div-thumb" id="div-thumb-3"></div>
+    <div class="div-slide-item div-nav" id="div-nav-right">&gt;&gt;</div>
+  </div>
 
 </body>
 </html>
