--- a/html/mozilla-is-cool/index.html
+++ b/html/mozilla-is-cool/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>测试页面</title>
     <link href="styles/style.css" rel="stylesheet" type="text/css">
-    <script src="scripts/main.js" async></script>
+    <script src="scripts/main.js" defer></script>
   </head>
   <body>
     <h1>Mozilla 酷毙了！</h1>
