--- a/javascript/gallery/index.html
+++ b/javascript/gallery/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>照片库</title>
     <link rel="stylesheet" href="style.css">
-    <script src="main.js" async></script>
+    <script src="main.js" defer></script>
   </head>
 
   <body>
@@ -16,7 +16,6 @@
       <button class="dark">变暗</button>
     </div>
 
-    <div class="thumb-bar">
-    </div>
+    <div class="thumb-bar"></div>
   </body>
 </html>
