--- a/javascript/silly-story-genarator/start/index.html
+++ b/javascript/silly-story-genarator/start/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width">
     <title>笑话生成器</title>
     <link rel="stylesheet" href="style.css">
-    <script src="ui.js" async></script>
+    <script src="ui.js" defer></script>
   </head>
 
   <body>
