--- a/extras/number-guessing-game-improved/index.html
+++ b/extras/number-guessing-game-improved/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>猜数字游戏</title>
   <link rel="stylesheet" type="text/css" href="style.css">
-  <script src="main.js" async></script>
+  <script src="main.js" defer></script>
 </head>
 
 <body>
