--- a/extras/tetris/index.html
+++ b/extras/tetris/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>俄罗斯方块</title>
   <link type="text/css" rel="stylesheet" href="style.css">
-  <script src="main.js" async></script>
+  <script src="main.js" defer></script>
 </head>
 
 <body>
