--- a/javascript/bouncing-balls-evil-circle/index.html
+++ b/javascript/bouncing-balls-evil-circle/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>弹球</title>
     <link rel="stylesheet" href="style.css">
-    <script src="main.js" async></script>
+    <script src="main.js" defer></script>
   </head>
 
   <body>
