--- a/javascript/key-event/index.html
+++ b/javascript/key-event/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>KeyboardEvent.key</title>
   <link type="text/css" rel="stylesheet" href="style.css">
-  <script src="main.js" async></script>
+  <script src="main.js" defer></script>
 </head>
 
 <body>
