--- a/javascript/silly-story-genarator/index.html
+++ b/javascript/silly-story-genarator/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width">
   <title>笑话生成器</title>
   <link rel="stylesheet" href="style.css">
-  <script src="ui.js" async></script>
-  <script src="main.js" async></script>
+  <script src="ui.js" defer></script>
+  <script src="main.js" defer></script>
 </head>
 
 <body>
