--- a/javascript/touch-paint/index.html
+++ b/javascript/touch-paint/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>触摸事件</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
-  <script src="main.js" async></script>
+  <script src="main.js" defer></script>
 </head>
 <body>
   <canvas id="canvas">
