--- a/html/mozilla-is-cool-scripted/index.html
+++ b/html/mozilla-is-cool-scripted/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>测试页面</title>
+    <link href="styles/style.css" rel="stylesheet" type="text/css">
+    <script src="scripts/main.js" defer></script>
   </head>
   <body>
     <h1>Mozilla 酷毙了！</h1>
@@ -19,5 +21,7 @@
     <p>我们致力于让 Internet 保持活力，保持畅通，人人皆可贡献，人人皆可创造。我们坚信：开放平台的协作对于人的发展至关重要，也决定着我们共同的未来。</p>
 
     <p>为了达成我们共同的理想，我们遵循一系列的价值观和理念，请参阅 <a href="https://www.mozilla.org/zh-CN/about/manifesto/">Mozilla 宣言</a>。</p>
+
+    <button>切换用户</button>
   </body>
 </html>
