--- a/extras/calculator/basic.html
+++ b/extras/calculator/basic.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <title>基础计算器</title>
-  <link rel="stylesheet" href="styles/basic.css">
+  <link rel="stylesheet" href="styles/style.css">
   <script src="scripts/basic.js" defer></script>
 </head>
 
