--- a/html/playable-code/index.html
+++ b/html/playable-code/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>代码操场</title>
     <link rel="stylesheet" href="style.css">
+    <script src="codedb.js" defer></script>
     <script src="main.js" defer></script>
   </head>
   <body>
@@ -17,6 +18,11 @@
     <div class="controls">
       <button id="btn-reset">重置</button>
       <button id="btn-solution">显示答案</button>
+      <select id="select-item">
+        <option value="italics">斜体字</option>
+        <option value="link">超链接</option>
+        <option value="image">添加图片</option>
+      </select>
     </div>
   </body>
 </html>
