--- a/html/playable-code/index.html
+++ b/html/playable-code/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>代码操场</title>
     <link rel="stylesheet" href="style.css">
-    <script src="codedb.js" defer></script>
-    <script src="main.js" defer></script>
+    <script src="scripts/codedb.js" defer></script>
+    <script src="scripts/main.js" defer></script>
   </head>
   <body>
     <h2>实时输出</h2>
@@ -18,11 +18,7 @@
     <div class="controls">
       <button id="btn-reset">重置</button>
       <button id="btn-solution">显示答案</button>
-      <select id="select-item">
-        <option value="italics">斜体字</option>
-        <option value="link">超链接</option>
-        <option value="image">添加图片</option>
-      </select>
+      <select id="select-items"></select>
     </div>
   </body>
 </html>
