--- a/html/mdn-splash-page/index.html
+++ b/html/mdn-splash-page/index.html
@@ -15,7 +15,7 @@
 
     <main>
       <article>
-        <iframe src="https://player.bilibili.com/player.html?aid=3303261&cid=5221343&page=2" scrolling="no" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+        <iframe src="https://player.bilibili.com/player.html?aid=3303261&cid=5221343&page=2" width="400" height="225" scrolling="no" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
         <h2>自由网络 尽情驰骋</h2>
 
         <p>Mozilla 是一个全球社区，这里聚集着来自五湖四海的 技术人员、思考者、建造者。我们致力于让 Internet 保持活力，保持畅通，人人皆可贡献，人人皆可创造。我们坚信：开放平台的协作对于人的发展至关重要，也决定着我们共同的未来。</p>
