--- a/extras/tools/key-event/index.html
+++ b/extras/tools/key-event/index.html
@@ -3,17 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <title>KeyboardEvent.key</title>
-  <link type="text/css" rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css">
   <script src="main.js" defer></script>
 </head>
 
 <body>
-  <div class="flex flex-left">
-    <textarea rows="5" id="test-target"></textarea>
-    <button id="btn-clear-console">清空控制台</button>
-  </div>
-  <div class="flex flex-right">
-    <div id="console-log"></div>
+  <div class="fx">
+    <div>
+      <textarea rows="5" name="test-target" id="test-target"></textarea>
+      <button type="button" name="btn-clear-console" id="btn-clear-console">清除控制台</button>
+    </div>
+    <div class="flex">
+      <pre id="console-log"></pre>
+    </div>
   </div>
 </body>
 </html>
