--- a/javascript/introduction-to-js-1/maths/conditional.html
+++ b/javascript/introduction-to-js-1/maths/conditional.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>First conditional example</title>
+    <title>条件语句示例 1</title>
   </head>
   <body>
-    <button>Start machine</button>
-    <p>The machine is stopped.</p>
+    <button>开机</button>
+    <p>机器已关闭。</p>
   </body>
 
   <script>
@@ -16,12 +16,12 @@
     btn.addEventListener('click', updateBtn);
 
     function updateBtn() {
-      if(btn.textContent === 'Start machine') {
-        btn.textContent = 'Stop machine';
-        txt.textContent = 'The machine has started!';
+      if(btn.textContent === '开机') {
+        btn.textContent = '关机';
+        txt.textContent = '机器已开启！';
       } else {
-        btn.textContent = 'Start machine';
-        txt.textContent = 'The machine is stopped.';
+        btn.textContent = '开机';
+        txt.textContent = '机器已关闭。';
       }
     }
   </script>
