--- a/javascript/introduction-to-js-1/maths/conditional2.html
+++ b/javascript/introduction-to-js-1/maths/conditional2.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Second conditional example</title>
+    <title>条件语句示例2</title>
     <style>
       * {
         box-sizing: border-box;
@@ -10,6 +10,7 @@
 
       html {
         font-family: monospace;
+        transition: background-color 200ms ease-in;
       }
 
       body {
@@ -39,8 +40,8 @@
     </style>
   </head>
   <body>
-    <p>Tell me how you're feeling today.</p>
-    <div><input type="text"> <button>Enter</button></div>
+    <p>你今天心情如何？[开心|难过|生气]</p>
+    <div><input type="text"> <button>确定</button></div>
     <p class="output"></p>
   </body>
 
@@ -53,18 +54,18 @@
     inputTxt.focus();
 
     btn.onclick = function() {
-      var final = inputTxt.value.toLowerCase();
-      if(final === 'happy') {
-        outputTxt.textContent = 'I am glad you are feeling good today!';
-        html.style.backgroundColor = 'yellow';
-      } else if(final === 'sad') {
-        outputTxt.textContent = 'Poor you, I\'m sad you\'re blue.';
+      const final = inputTxt.value;
+      if(final === '开心') {
+        outputTxt.textContent = '你开心，我快乐！';
+        html.style.backgroundColor = 'khaki';
+      } else if(final === '难过') {
+        outputTxt.textContent = '别难过，一切都会过去！';
         html.style.backgroundColor = 'lightblue';
-      } else if(final === 'angry') {
-        outputTxt.textContent = 'Whoa there, calm down, let me help.';
-        html.style.backgroundColor = 'red';
+      } else if(final === '生气') {
+        outputTxt.textContent = '人生就像一场戏，恩怨何必太在意！';
+        html.style.backgroundColor = 'crimson';
       } else {
-        outputTxt.textContent = 'I\'m not sure what that means...';
+        outputTxt.textContent = '我不太明白……';
         html.style.backgroundColor = 'beige';
       }
     }
