--- a/javascript/introduction-to-js-1/assessment-finished/index.html
+++ b/javascript/introduction-to-js-1/assessment-finished/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width">
 
-    <title>Silly story generator</title>
+    <title>笑话机</title>
 
     <link href="style.css" rel="stylesheet">
     <script src="main.js" defer></script>
