--- a/html/introduction-to-html/the-html-head/meta-example.html
+++ b/html/introduction-to-html/the-html-head/meta-example.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="zh-CN">
   <head>
     <meta charset="utf-8">
-    <title>Meta examples</title>
+    <title>元数据示例</title>
     
     <meta name="author" content="Chris Mills">
-    <meta name="description" content="This is an example page to demonstrate usage of metadata on web pages.">
+    <meta name="description" content="本示例页面展示网页元数据的用法。">
 
     <meta property="og:image" content="https://developer.cdn.mozilla.net/static/img/opengraph-logo.dc4e08e2f6af.png">
-    <meta property="og:description" content="This is an example page to demonstrate usage of metadata on web pages.">
-    <meta property="og:title" content="Metadata; The HTML &lt;head&gt;, on MDN">
+    <meta property="og:description" content="本示例页面展示网页元数据的用法。">
+    <meta property="og:title" content="MDN页面 - HTML &lt;head&gt; 元素中的元数据">
 
     <link rel="Shortcut Icon" href="favicon.ico" type="image/x-icon">
   </head>
   <body>
-    <h1>Meta examples</h1>
+    <h1>元数据示例</h1>
 
-    <p>Japanese example: ご飯が熱い。</p>
+    <p>藏语示例：བཀྲ་ཤིས་བདེ་ལེགས།</p>
   </body>
 </html>
