--- a/javascript/introduction-to-js-1/maths/conditional2.html
+++ b/javascript/introduction-to-js-1/maths/conditional2.html
@@ -63,7 +63,7 @@
         html.style.backgroundColor = 'lightblue';
       } else if(final === '生气') {
         outputTxt.textContent = '人生就像一场戏，恩怨何必太在意！';
-        html.style.backgroundColor = 'crimson';
+        html.style.backgroundColor = 'indianred';
       } else {
         outputTxt.textContent = '我不太明白……';
         html.style.backgroundColor = 'beige';
