--- a/javascript/introduction-to-js-1/troubleshooting/number-game-errors.html
+++ b/javascript/introduction-to-js-1/troubleshooting/number-game-errors.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
 
-    <title>Number guessing game</title>
+    <title>猜数字游戏</title>
 
     <style>
       html {
@@ -23,13 +23,13 @@
   </head>
 
   <body>
-      <h1>Number guessing game</h1>
+    <h1>猜数字游戏</h1>
 
-      <p>We have selected a random number between 1 and 100. See if you can guess it in 10 turns or less. We'll tell you if your guess was too high or too low.</p>
+    <p>我刚才随机选定了一个100以内的自然数。看你能否在 10 次以内猜中它。每次我都会告诉你所猜的结果是高了还是低了。</p>
 
 <div class="form">
   <label for="guessField">Enter a guess: </label><input type="text" id="guessField" class="guessField">
-  <input type="submit" value="Submit guess" class="guessSubmit">
+  <input type="submit" value="我猜" class="guessSubmit">
 </div>
 
 <div class="resultParas">
@@ -56,25 +56,25 @@
 
     let userGuess = Number(guessField.value);
     if(guessCount === 1) {
-      guesses.textContent = 'Previous guesses: ';
+      guesses.textContent = '上次猜的数：';
     }
     guesses.textContent += userGuess + ' ';
 
     if(userGuess === randomNumber) {
-      lastResult.textContent = 'Congratulations! You got it right!';
+      lastResult.textContent = '恭喜你！猜对了！';
       lastResult.style.backgroundColor = 'green';
       lowOrHi.textContent = '';
       setGameOver();
     } else if(guessCount === 10) {
-      lastResult.textContent = '!!!GAME OVER!!!';
+      lastResult.textContent = '!!!游戏结束!!!';
       setGameOver();
     } else {
-      lastResult.textContent = 'Wrong!';
+      lastResult.textContent = '你猜错了！';
       lastResult.style.backgroundColor = 'red';
       if(userGuess < randomNumber) {
-        lowOrHi.textContent = 'Last guess was too low!';
+        lowOrHi.textContent = '你刚才猜低了！';
       } else if(userGuess > randomNumber) {
-        lowOrHi.textContent = 'Last guess was too high!';
+        lowOrHi.textContent = '你刚才猜高了！';
       }
     }
 
@@ -88,7 +88,7 @@
 	  guessField.disabled = true;
 	  guessSubmit.disabled = true;
 	  resetButton = document.createElement('button');
-	  resetButton.textContent = 'Start new game';
+	  resetButton.textContent = '开始新游戏';
 	  document.body.appendChild(resetButton);
 	  resetButton.addeventListener('click', resetGame);
   }
