--- a/javascript/introduction-to-js-1/first-splash/number-guessing-game.html
+++ b/javascript/introduction-to-js-1/first-splash/number-guessing-game.html
@@ -71,9 +71,9 @@
           lastResult.textContent = '你猜错了！';
           lastResult.style.backgroundColor = 'red';
           if(userGuess < randomNumber) {
-            lowOrHi.textContent = '你猜低了！' ;
+            lowOrHi.textContent = '你刚才猜低了！' ;
           } else if(userGuess > randomNumber) {
-            lowOrHi.textContent = '你猜高了！';
+            lowOrHi.textContent = '你刚才猜高了！';
           }
         }
 
