--- a/html/tables/basic/timetable-fixed.html
+++ b/html/tables/basic/timetable-fixed.html
@@ -42,7 +42,7 @@
     <col span="2" style="width:42px;">
   </colgroup>
   <tr>
-    <td> </td>
+    <td>&nbsp;</td>
     <th>星期一</th>
     <th>星期二</th>
     <th>星期三</th>
@@ -54,42 +54,42 @@
   <tr>
     <th>第一节</th>
     <td>英语</td>
-    <td> </td>
-    <td> </td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
     <td>德语</td>
     <td>荷兰语</td>
-    <td> </td>
-    <td> </td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
   </tr>
   <tr>
     <th>第二节</th>
     <td>英语</td>
     <td>英语</td>
-    <td> </td>
+    <td>&nbsp;</td>
     <td>德语</td>
     <td>荷兰语</td>
-    <td> </td>
-    <td> </td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
   </tr>
   <tr>
     <th>第三节</th>
-    <td> </td>
+    <td>&nbsp;</td>
     <td>德语</td>
-    <td> </td>
+    <td>&nbsp;</td>
     <td>德语</td>
     <td>荷兰语</td>
-    <td> </td>
-    <td> </td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
   </tr>
   <tr>
     <th>第四节</th>
-    <td> </td>
+    <td>&nbsp;</td>
     <td>英语</td>
-    <td> </td>
+    <td>&nbsp;</td>
     <td>英语</td>
     <td>荷兰语</td>
-    <td> </td>
-    <td> </td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
   </tr>
 </table>
 
