--- a/html/forms/html-form-structure/payment-form.html
+++ b/html/forms/html-form-structure/payment-form.html
@@ -10,7 +10,7 @@
 <body>
     <form method="post">
         <h1>付费表单</h1>
-        <p><strong><abbr title="required">*</abbr></strong>为必填项目。</p>
+        <p><strong><abbr title="必填">*</abbr></strong>为必填项目。</p>
         <section>
             <h2>联系方式</h2>
             <fieldset>
@@ -39,21 +39,21 @@
             <p>
               <label for="name">
                 <span>名字：</span>
-                <strong><abbr title="required">*</abbr></strong>
+                <strong><abbr title="必填">*</abbr></strong>
               </label>
               <input type="text" id="name" name="username">
             </p>
             <p>
               <label for="mail">
                 <span>电子邮件：</span>
-                <strong><abbr title="required">*</abbr></strong>
+                <strong><abbr title="必填">*</abbr></strong>
               </label>
               <input type="email" id="mail" name="usermail">
             </p>
             <p>
               <label for="pwd">
                 <span>密码：</span>
-                <strong><abbr title="required">*</abbr></strong>
+                <strong><abbr title="必填">*</abbr></strong>
               </label>
               <input type="password" id="pwd" name="password">
             </p>
@@ -73,14 +73,14 @@
             <p>
               <label for="number">
                 <span>卡号：</span>
-                <strong><abbr title="required">*</abbr></strong>
+                <strong><abbr title="必填">*</abbr></strong>
               </label>
                 <input type="tel" id="number" name="cardnumber">
             </p>
             <p>
               <label for="date">
                 <span>有效期至：</span>
-                <strong><abbr title="required">*</abbr></strong>
+                <strong><abbr title="必填">*</abbr></strong>
                 <em>日期格式：yyyy/mm/dd</em>
               </label>
               <input type="date" id="date" name="expiration">
