--- a/html/forms/html-form-structure/required-labels.html
+++ b/html/forms/html-form-structure/required-labels.html
@@ -28,7 +28,7 @@
 
         <!-- 但似乎这样写最好： -->
         <div>
-          <label for="username">名字：<abbr title="required">*</abbr></label>
+          <label for="username">名字：<abbr title="必填">*</abbr></label>
           <input id="username" type="text" name="username">
         </div>
     </form>
