--- a/html/forms/editable-input-example/editable_input.html
+++ b/html/forms/editable-input-example/editable_input.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Editable form &lt;input&gt; example</title>
+    <title>可编辑表格 &lt;input&gt; 示例</title>
     <style>
       textarea {
         height: 80px;
@@ -47,16 +47,16 @@
     </textarea>
 
     <div class="playable-buttons">
-      <input id="reset" type="button" value="Reset">
+      <input id="reset" type="button" value="重置">
     </div>
   </body>
 
   <script>
-    var section = document.querySelector('section');
-    var textarea = document.getElementById('code');
-    var reset = document.getElementById('reset');
-    var edit = document.getElementById('edit');
-    var code = textarea.value;
+    const section = document.querySelector('section');
+    const textarea = document.getElementById('code');
+    const reset = document.getElementById('reset');
+    const edit = document.getElementById('edit');
+    const code = textarea.value;
 
     function fillSection() {
       while (section.firstChild) {
