--- a/css/introduction-to-css/fundamental-css-comprehension-finished/index.html
+++ b/css/introduction-to-css/fundamental-css-comprehension-finished/index.html
@@ -13,7 +13,7 @@
     </header>
     <article>
       <img src="chris.jpg" alt="A picture of Chris - a man with glasses, a beard, and a silly wooly hat">
-      <p>50 My Street</br>
+      <p>50 My Street<br>
          The Town<br>
          Gray Peach<br>
          UK<br>
