--- a/css/introduction-to-css/fundamental-css-comprehension/index.html
+++ b/css/introduction-to-css/fundamental-css-comprehension/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Fundamental CSS comprehension</title>
+    <title>基础 CSS 理解</title>
   </head>
   <body>
 
@@ -12,7 +12,7 @@
     </header>
     <article>
       <img src="chris.jpg" alt="A picture of Chris - a man with glasses, a beard, and a silly wooly hat">
-      <p>50 My Street</br>
+      <p>50 My Street<br>
          The Town<br>
          Gray Peach<br>
          UK<br>
