--- a/css/introduction-to-css/css-values-and-units/index.html
+++ b/css/introduction-to-css/css-values-and-units/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>CSS 值和单元</title>
+    <title>CSS 值和单位</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
