--- a/html/forms/date-picker-fallback/index.html
+++ b/html/forms/date-picker-fallback/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>日期控制示例（兼容版）</title>
+  <title>日期选择器示例（兼容版）</title>
   <style>
     input:invalid+span:after {
       content: '✖';
