--- a/html/forms/datetime-local-picker-fallback/index.html
+++ b/html/forms/datetime-local-picker-fallback/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>本地日期时间控制示例（兼容版）</title>
+  <title>本地日期时间选择器示例（兼容版）</title>
   <style>
     div {
       margin-bottom: 10px;
