localize and typeset

--- a/javascript/introduction-to-js-1/maths/loop.html
+++ b/javascript/introduction-to-js-1/maths/loop.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Basic loop example</title>
+    <title>基础循环示例</title>
     <style>
       * {
         box-sizing: border-box;
@@ -27,7 +27,7 @@
   <body>
 
     <div>
-      <p>Invoice totals before sales tax ($):</p>
+      <p>税前价格 ($):</p>
 
       <ul class="before">
 
@@ -36,7 +36,7 @@
     </div>
 
     <div>
-      <p>Invoice totals with 6% sales tax added ($):</p>
+      <p>加 6% 税后价格 ($):</p>
 
       <ul class="after">
 
@@ -44,24 +44,20 @@
 
     </div>
 
-    
-  </body>
-
   <script>
-
-const totals = [191.45, 890.56, 67.99, 12.34, 235.64];
-const beforeList = document.querySelector('.before');
-const afterList = document.querySelector('.after');
-for(let i = 0; i < totals.length; i++) {
-    const listItem = document.createElement('li');
-    listItem.textContent = totals[i];
-    beforeList.appendChild(listItem);
-}
-for(let j = 0; j < totals.length; j++) {
-    const listItem = document.createElement('li');
-    listItem.textContent = (totals[j] * 1.06).toFixed(2);
-    afterList.appendChild(listItem);
-}
-    
+    const totals = [191.45, 890.56, 67.99, 12.34, 235.64];
+    const beforeList = document.querySelector('.before');
+    const afterList = document.querySelector('.after');
+    for(let i = 0; i < totals.length; i++) {
+        const listItem = document.createElement('li');
+        listItem.textContent = totals[i];
+        beforeList.appendChild(listItem);
+    }
+    for(let j = 0; j < totals.length; j++) {
+        const listItem = document.createElement('li');
+        listItem.textContent = (totals[j] * 1.06).toFixed(2);
+        afterList.appendChild(listItem);
+    }
   </script>
+  </body>
 </html>
